<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_MKS_907" Id="{df31f1d7-889f-430b-b098-d006342326eb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MKS_907
VAR_INPUT
	stVolume : ST_Volume;
	q_xGaugeConnected	:	BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stGauge	:	ST_MKS_907;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* 
MKS 907 Vacuum gauge

A vacuum gauge takes as input, the pressure of the volume it is attached to,
and produces on its analog output, a corresponding voltage.


*)

IF q_xGaugeConnected THEN
	(*set gauge real pressure based on chamber real pressure*)
	stGauge.rPress := stVolume.rPressure;
	(*set gauge raw pressure based on transformation of real pressure*)
	stGauge.q_iRawPress := F_MKS_907(stGauge);// gauge on
ELSE
	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge not on ??
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_MKS_907">
      <LineId Id="14" Count="6" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="32" Count="2" />
      <LineId Id="27" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="29" Count="1" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>